# ardudeck

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.codex/: config.toml
.github/workflows/: build.yml  sim-engine-release.yml
apps/desktop/: electron.vite.config.ts  engine.json  package.json  sim-engine.json  tsconfig.json
apps/desktop/resources/: icon.icns  splash.html
apps/desktop/scripts/: fetch-engine.mjs  fetch-sim-engine.mjs  stage-sim-engine.mjs
apps/desktop/src/main/: index.ts  ipc-handlers.ts  log-worker.ts  preload.ts  px4-param-bytewise.test.ts  px4-param-bytewise.ts  px4-parameter-metadata.test.ts  px4-parameter-metadata.ts  splash-window.ts  window-manager.ts
apps/desktop/src/renderer/: App.tsx  i18n.ts  index.html  main.tsx
apps/desktop/src/shared/: board-ids.ts  camera-types.ts  (+33 more)
crates/ardudeck-sim-engine/: Cargo.toml
crates/ardudeck-sim-engine/src/: battery.rs  collision.rs  copter.rs  fault.rs  fdm_server.rs  frame.rs  frame_geometry.rs  guidance.rs  lib.rs  main.rs  math.rs  motor.rs  obstacle.rs  protocol.rs  record.rs  rng.rs  runner.rs  scenario.rs  sensors.rs  state_stream.rs  terrain.rs  wake.rs  wind.rs  world.rs  world_env.rs
crates/ardudeck-sim-engine/tests/: slung_verify.rs
docker/gazebo/: Dockerfile  docker-compose.yml
examples/python-plugins/anomaly-ai/: README.md  main.py  plugin.json
tools/graphify/: refresh.py  refresh.sh  seed-labels.json  seed-labels.json.sig
tools/mavlink-generator/: package.json  tsconfig.json
tools/mavlink-generator/src/: index.ts
(+236 files in other folders)
